@@ -29,14 +29,18 @@
 #include <QDialogButtonBox>
 #include <QDir>
 #include <QFormLayout>
+#include <QFrame>
+#include <QGridLayout>
 #include <QSettings>
 #include <QSpinBox>
+#include <QToolButton>
 #include <QVBoxLayout>
 
+#include <cstdlib>
 #include <ctime>
 
 NewGameDialog::NewGameDialog(Board* board, QWidget* parent)
-: QDialog(parent), m_board(board) {
+: QDialog(parent, Qt::WindowTitleHint | Qt::WindowSystemMenuHint | Qt::WindowCloseButtonHint), m_board(board) {
 	setWindowTitle(tr("New Game"));
 
 	// Create languages box
@@ -49,45 +53,60 @@ NewGameDialog::NewGameDialog(Board* board, QWidget* parent)
 	}
 	connect(m_languages_box, SIGNAL(currentIndexChanged(int)), this, SLOT(languageSelected(int)));
 
-	// Create patterns box
-	m_patterns_box = new QComboBox(this);
-	for (int i = 0; i < Pattern::types(); ++i) {
-		Pattern* pattern = Pattern::create(m_wordlist, i);
-		m_patterns.append(pattern);
-		m_patterns_box->addItem(pattern->name(), i);
-	}
-	connect(m_patterns_box, SIGNAL(currentIndexChanged(int)), this, SLOT(patternSelected(int)));
-
-	// Create word length box
-	m_word_length_box = new QComboBox(this);
-
 	// Create word count box
 	m_word_count_box = new QComboBox(this);
 	m_word_count_box->addItems(QStringList() << tr("Low") << tr("Medium") << tr("High") << tr("Very High"));
 
-	// Create buttons
-	QDialogButtonBox* buttons = new QDialogButtonBox(QDialogButtonBox::Ok | QDialogButtonBox::Cancel, Qt::Horizontal, this);
-	connect(buttons, SIGNAL(accepted()), this, SLOT(accept()));
+	// Create word length box
+	m_word_length_box = new QComboBox(this);
+	connect(m_word_length_box, SIGNAL(activated(int)), this, SLOT(lengthSelected(int)));
+
+	// Create pattern buttons
+	QFrame* patterns = new QFrame(this);
+	QGridLayout* patterns_layout = new QGridLayout(patterns);
+	patterns->setFrameStyle(QFrame::StyledPanel | QFrame::Sunken);
+	for (int i = 0; i < Pattern::types(); ++i) {
+		Pattern* pattern = Pattern::create(m_wordlist, i);
+		m_patterns.append(pattern);
+
+		QToolButton* pattern_button = new QToolButton(patterns);
+		pattern_button->setAutoRaise(false);
+		pattern_button->setText(pattern->name());
+		pattern_button->setIconSize(QSize(80,80));
+		pattern_button->setIcon(QIcon(QString(":/patterns/%1.png").arg(i)));
+		pattern_button->setToolButtonStyle(Qt::ToolButtonTextUnderIcon);
+		pattern_button->setSizePolicy(QSizePolicy::MinimumExpanding, QSizePolicy::MinimumExpanding);
+		connect(pattern_button, SIGNAL(clicked()), this, SLOT(patternSelected()));
+
+		patterns_layout->addWidget(pattern_button, i / 3, i % 3);
+		m_pattern_buttons.append(pattern_button);
+	}
+
+	// Create cancel button
+	QDialogButtonBox* buttons = new QDialogButtonBox(QDialogButtonBox::Cancel, Qt::Horizontal, this);
 	connect(buttons, SIGNAL(rejected()), this, SLOT(reject()));
 
 	// Lay out dialog
 	QFormLayout* contents_layout = new QFormLayout;
+	contents_layout->setFormAlignment(Qt::AlignHCenter | Qt::AlignTop);
+	contents_layout->setLabelAlignment(Qt::AlignRight | Qt::AlignVCenter);
 	contents_layout->addRow(tr("Language:"), m_languages_box);
-	contents_layout->addRow(tr("Pattern:"), m_patterns_box);
-	contents_layout->addRow(tr("Word Length:"), m_word_length_box);
 	contents_layout->addRow(tr("Amount of Words:"), m_word_count_box);
+	contents_layout->addRow(tr("Word Length:"), m_word_length_box);
 
 	QVBoxLayout* layout = new QVBoxLayout(this);
 	layout->addLayout(contents_layout);
-	layout->addSpacing(18);
+	layout->addSpacing(layout->margin());
+	layout->addWidget(patterns);
+	layout->addSpacing(layout->margin());
 	layout->addWidget(buttons);
 
 	// Load settings
 	QSettings settings;
 	setLanguage(settings.value("NewGame/Language", WordList::defaultLanguage()).toString());
-	setPattern(settings.value("NewGame/Pattern", 1).toInt());
 	setCount(settings.value("NewGame/Count", 1).toInt());
 	setLength(settings.value("NewGame/Length", 7).toInt());
+	m_pattern_buttons.at(settings.value("NewGame/Pattern").toInt())->setFocus();
 }
 
 //-----------------------------------------------------------------------------
@@ -98,9 +117,41 @@ NewGameDialog::~NewGameDialog() {
 
 //-----------------------------------------------------------------------------
 
-void NewGameDialog::accept() {
+void NewGameDialog::languageSelected(int index) {
+	m_wordlist->setLanguage(m_languages_box->itemData(index).toString());
+
+	int length = m_word_length_box->itemData(m_word_length_box->currentIndex()).toInt();
+	m_word_length_box->clear();
+	for (int i = 5; i <= m_wordlist->maximumLength(); ++i) {
+		m_word_length_box->addItem(tr("%n letter(s)", "", i), i);
+	}
+	setLength(length);
+}
+
+//-----------------------------------------------------------------------------
+
+void NewGameDialog::lengthSelected(int index) {
+	int length = m_word_length_box->itemData(index).toInt();
+	for (int i = 0; i < m_pattern_buttons.count(); ++i) {
+		m_pattern_buttons.at(i)->setEnabled(length >= m_patterns.at(i)->minimumLength());
+	}
+}
+
+//-----------------------------------------------------------------------------
+
+void NewGameDialog::patternSelected() {
+	int pattern = -1;
+	for (int i = 0; i < m_pattern_buttons.count(); ++i) {
+		if (m_pattern_buttons.at(i) == sender()) {
+			pattern = i;
+			break;
+		}
+	}
+	if (pattern == -1) {
+		return;
+	}
+
 	QString language = m_languages_box->itemData(m_languages_box->currentIndex()).toString();
-	int id = m_patterns_box->itemData(m_patterns_box->currentIndex()).toInt();
 	int count = m_word_count_box->currentIndex();
 	int length = m_word_length_box->itemData(m_word_length_box->currentIndex()).toInt();
 	srand(time(0));
@@ -109,12 +160,12 @@ void NewGameDialog::accept() {
 	QSettings settings;
 	settings.remove("Current");
 	settings.setValue("NewGame/Language", language);
-	settings.setValue("NewGame/Pattern", id);
+	settings.setValue("NewGame/Pattern", pattern);
 	settings.setValue("NewGame/Count", count);
 	settings.setValue("NewGame/Length", length);
 	settings.setValue("Current/Version", 3);
 	settings.setValue("Current/Language", language);
-	settings.setValue("Current/Pattern", id);
+	settings.setValue("Current/Pattern", pattern);
 	settings.setValue("Current/Count", count);
 	settings.setValue("Current/Length", length);
 	settings.setValue("Current/Seed", seed);
@@ -122,28 +173,7 @@ void NewGameDialog::accept() {
 
 	m_board->openGame();
 
-	QDialog::accept();
-}
-
-//-----------------------------------------------------------------------------
-
-void NewGameDialog::languageSelected(int index) {
-	m_wordlist->setLanguage(m_languages_box->itemData(index).toString());
-	patternSelected(m_patterns_box->currentIndex());
-}
-
-//-----------------------------------------------------------------------------
-
-void NewGameDialog::patternSelected(int index) {
-	Pattern* pattern = m_patterns.at(m_patterns_box->itemData(index).toInt());
-
-	// Set up word length combobox
-	int length = m_word_length_box->itemData(m_word_length_box->currentIndex()).toInt();
-	m_word_length_box->clear();
-	for (int i = pattern->minimumLength(); i <= pattern->maximumLength(); ++i) {
-		m_word_length_box->addItem(tr("%n letter(s)", "", i), i);
-	}
-	setLength(length);
+	accept();
 }
 
 //-----------------------------------------------------------------------------
@@ -160,18 +190,6 @@ void NewGameDialog::setLanguage(const QString& language) {
 
 //-----------------------------------------------------------------------------
 
-void NewGameDialog::setPattern(int pattern) {
-	int id = m_patterns_box->findData(pattern);
-	if (id == -1) {
-		id = 0;
-	} else if (id == 0) {
-		m_patterns_box->setCurrentIndex(1);
-	}
-	m_patterns_box->setCurrentIndex(id);
-}
-
-//-----------------------------------------------------------------------------
-
 void NewGameDialog::setCount(int count) {
 	count = qBound(0, count, 3);
 	m_word_count_box->setCurrentIndex(count);
@@ -183,4 +201,5 @@ void NewGameDialog::setLength(int length) {
 	int min = m_word_length_box->itemData(0).toInt();
 	int max = m_word_length_box->itemData(m_word_length_box->count() - 1).toInt();
 	m_word_length_box->setCurrentIndex(qBound(min, length, max) - min);
+	lengthSelected(m_word_length_box->currentIndex());
 }
